salesforce-classic-Feature-IN-955/src/objects/Account_Custom_Field__c.object
<CustomObject>
    <description>The custom fields for this Account.</description>
    <label>Account Custom Field</label>
    <nameField>
        <label>Account Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Custom Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>accountNum__c</fullName>
        <label>Gotransverse AccountNum</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Gotransverse Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Custom Fields</relationshipLabel>
        <relationshipName>Account_Custom_Fields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>activeTrigger__c</fullName>
        <label>Gotransverse ActivateTrigger</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eid__c</fullName>
        <label>Gotransverse Eid</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fieldValidationType__c</fullName>
        <label>Gotransverse Field Validation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>field_type__c</fullName>
        <label>Gotransverse Field Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Order_List_Value__c</fullName>
        <label>Gotransverse Store Order List Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value of custom field.</description>
        <label>Gotransverse Value</label>
        <length>40</length>
        <type>Text</type>
    </fields>
</CustomObject>